--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,9 @@ html, body{width: 100%; height: 100%; overflow: hidden;}
 .main_above,.main_below{flex-direction: row;justify-content: space-between;align-items: flex-start;background: unset;padding-top: unset}
 .video,.command{width: 69%;height: 100%;padding-left:10px;padding-right: 10px;box-sizing: border-box; display: flex;background: #1b1e25;flex-direction: column;justify-content:flex-start;align-items:flex-start;padding-top: 2%;}
 .console,.electricity{display: flex; width:29%;height: 100%;flex-direction: column;justify-content:flex-start;align-items:flex-start;background: #1b1e25;padding:0 10px;box-sizing: border-box;padding-top: 2%;}
-.video_tit,.console_tit,.electricity_tit,.command_tit{font-size: 14px;color: #797c85;;padding-left: 17px;box-sizing: border-box;line-height: 28px;width: 100%}
+.video_tit,.console_tit,.electricity_tit,.command_tit{font-size: 14px;color: #797c85;;padding-left: 17px;box-sizing: border-box;line-height: 28px;width: 100%;display: flex;align-content: center;align-items: center;}
+
+.video_container{width: 100%;display: flex;justify-content: center;}
 
 .console_div{width:100%;flex: 1}
 #console_lines{width: 100%;height: 100%}
